// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute price endpoint rest should return 502 when the provider returns a non-numeric result 1`] = `
{
  "errorMessage": "Invalid numeric result: null",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute price endpoint rest should return success 1`] = `
{
  "data": {
    "result": 239.255,
  },
  "result": 239.255,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;
